--- a/index.html
+++ b/index.html
@@ -69,15 +69,13 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
-        </p>
+            Fotógrafo con 15 años de experiencia en el mercado. La fotografía es una disciplina técnica y artística que consiste no sólo en capturar y reproducir imágenes sino que la escencia de la misma.     </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Fotógrafo de comida</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -87,7 +85,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Fotógrafo culinario</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -97,7 +95,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Fotógrafo de viajes</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
