--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 
 
             <div class="form-group">
-                <label class="mb-2">Mensaje</label>
-                <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
+                <label class="mb-2">Número Celular</label>
+                <textarea class="form-control" placeholder="Escribe aquí tu número"></textarea>
             </div>
 
             <div class="my-3 text-end">
@@ -211,7 +211,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Mauricio Novak 2024. Todos los derechos reservados.</p>
     </footer>
 
 
